--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.1.1",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.0",
@@ -14,5 +15,11 @@
     "dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "start": "yarn build && node build/index.js"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.14.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "prisma": "^4.14.0"
   }
 }
